styles/style.css
@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

* {
    margin: 0px;
    padding: 0px;
}
body {
    background-color: #f5f5f5;
}

main {
    display: flex;
    max-width: 1280px;
    margin: 0 auto;
    flex-direction: column;
}

/* shared styles */
.primary-bg {
    background-color: #c6e4d6;
}

.secondary-bg {
    background-color: #006a50;
}

.primary-font {
    font-family: "Fira Sans", serif;
}

.para-font {
    color: rgba(14, 14, 14, 0.7);
    font-size: 16px;
    line-height: 24px;
}

/* Hero Section Style */
.hero-container {
    display: flex;
    border-radius: 24px;
    /* max-width: 1280px; */
    justify-content: space-around;
    align-items: center;
    margin-top: 120px;
}

.hero-content {
    margin: 0px 60px;
}

.hero-content p {
    color: rgba(14, 14, 14, 0.5);
    font-size: 24px;
    font-weight: 500;
    margin-bottom: 20px;
}

.hero-content h3 {
    color: #0e0e0e;
    font-size: 56px;
    font-weight: 700;
    margin-bottom: 20px;
}

.hero-content button {
    padding: 17px 34px;
    border: none;
    border-radius: 8px;
    font-size: 18px;
    font-weight: 600;
    color: white;
}

.hero-container img {
    width: 470px;
    margin: 80px 60px;
    /* height: 300px; */
}

/* Styles for Vision Section */
.vision-container {
    margin-top: 80px;
}

.vision-content h3 {
    font-size: 40px;
    font-weight: bold;
    margin-bottom: 24px;
}

/* Style for cards */
.vision-card-container {
    display: flex;
    gap: 20px;
}

.card-box {
    border-radius: 16px;
    margin-top: 32px;
    margin-bottom: 32px;
    padding: 32px;
    flex: 1;
}

.card-box h6 {
    color: rgba(14, 14, 14, 0.8);
    font-size: 20px;
    font-weight: bold;
    margin-top: 24px;
    margin-bottom: 12px;
}

#card1 {
    background-color: rgba(84, 144, 245, 0.2);
    display: flex;
    flex-direction: column;
}

#card2 {
    background-color: rgba(198, 228, 214, 1);
    display: flex;
    flex-direction: column;
}

#card3 {
    background-color: rgba(247, 235, 207, 1);
}

.card-box p {
    margin-bottom: 24px;
}

.card-box button {
    padding: 11px 20px;
    border: none;
    border-radius: 8px;
    font-size: 16px;
    font-weight: 600;
    color: white;
}

#card1 button {
    background-color: #5490f5;
}

#card2 button {
    background-color: #09a15c;
}

#card3 button {
    background-color: #ffc239;
}
.btn {
    margin-top: auto;
}

/* Styles for the quotes section */
.quote-container {
    background-color: white;
    padding: 30px 24px 48px 24px;
    border-radius: 16px;
    margin-bottom: 80px;
}
.quotebg {
    background-image: url(/assets/quote-bg.png);
    background-repeat: no-repeat;
    background-position: top left;
}
.quote {
    font-size: 16px;
    color: rgba(14, 14, 14, 0.8);
    line-height: 24px;
    margin-bottom: 12px;
}
.quote-container h3 {
    font-size: 20px;
    font-weight: 600;
    color: rgba(14, 14, 14, 0.8);
    line-height: 24px;
    margin-bottom: 4px;
}

.quote-source {
    font-size: 16px;
    color: rgba(14, 14, 14, 0.6);
    line-height: 24px;
}

/* styles for Opinion Section */
.opinion-container h3 {
    font-size: 40px;
    font-weight: bold;
    margin-bottom: 24px;
}

.opinion-table-container {
    background-color: white;
    padding: 32px;
    border-radius: 16px;
}

.opinion-table table {
    border-collapse: collapse;
    width: 100%;
}

.opinion-table td {
    border: 2px solid rgba(14, 14, 14, 0.15);
    padding: 36px 24px;
    font-size: 16px;
    font-weight: 600;
}

.opinion-table th {
    padding: 24px;
    font-size: 20px;
    font-weight: 600;
    background-color: rgba(198, 228, 214, 1);
    text-align: left;
}
.opinion-table thead {
    border: 2px solid rgba(14, 14, 14, 0.15);
}

.opinion-table button {
    padding: 16px 12px 16px 16px;
    background-color: rgba(198, 228, 214, 1);
    /* margin: 24px; */
    width: 100%;
    font-size: 16px;
    font-weight: 800;
    border-radius: 4px;
}

.opinion-table select {
    border: none;
    background-color: rgba(198, 228, 214, 1);
}

.opinion-table .shrunk {
    width: 900px;
}

/* Styles for the News Section */
.news-section-container {
    margin-top: 80px;
}

.news-text h3 {
    font-size: 40px;
    font-weight: bold;
    margin-bottom: 24px;
}

.news-text p {
    margin-bottom: 32px;
}

.news-banner-container {
    padding: 48px;
    background-color: white;
    display: flex;
    gap: 32px;
    /* align-items: center; */
    justify-content: center;
    border-radius: 24px;
    margin-bottom: 24px;
}

#news-reverse {
    padding: 48px;
    background-color: white;
    display: flex;
    gap: 32px;
    flex-direction: row-reverse;
    /* align-items: center; */
    justify-content: center;
    border-radius: 24px;
    margin-bottom: 24px;
}

.news-img {
    width: 100%;
    height: 300px;
    background: url(/assets/satelite.png);
    border-radius: 24px;
    background-size: cover;
}

.news-banner-content {
    /* width: 100%;; */
    height: 300px;
    height: 100%;
}

.news-banner-content h3 {
    font-size: 32px;
    font-weight: bold;
    margin-bottom: 12px;
}

.news-banner-content img {
    margin-bottom: 12px;
}
.news-banner-content span {
    padding-right: 12px;
    color: rgba(14, 14, 14, 0.7);
    font-size: 16px;
    line-height: 24px;
}

.news-banner-content p {
    margin-top: 12px;
    margin-bottom: 32px;
}

.news-banner-content button {
    padding: 13px 26px;
    border: none;
    border-radius: 8px;
    font-size: 18px;
    font-weight: 600;
    color: white;
    background-color: #006a50;
}

/* Styles for Donate section */
.donate-container {
    margin-top: 60px;
}
.donate-container h3 {
    font-size: 40px;
    font-weight: bold;
    text-align: center;
    margin-bottom: 24px;
}

.donate-container p {
    text-align: center;
    margin-bottom: 32px;
}

.donate-card-container {
    display: flex;
    justify-content: space-between;
    gap: 20px;
    margin-bottom: 32px;
    padding: 0px 50px;
}

.donate-card-container button {
    padding: 40px;
    font-size: 40px;
    font-weight: bold;
    color: rgba(14, 14, 14, 0.8);
    background-color: #fff;
    border: 1px solid rgba(14, 14, 14, 0.15);
    border-radius: 16px;
    width: 100%;
}

.donate-input input {
    width: 100%;
    text-align: center;
    color: rgba(14, 14, 14, 0.3);
    font-size: 20px;
    padding: 20px 0px;
    border: none;
    border-bottom: 1px solid rgba(14, 14, 14, 0.15);
    margin-bottom: 32px;
}

.donate-button {
    display: flex;
    justify-content: center;
    margin-bottom: 80px;
}
.donate-button button {
    padding: 17px 34px;
    border: none;
    border-radius: 8px;
    font-size: 18px;
    font-weight: 600;
    color: white;
    background-color: #006a50;
}

/* Styles for Newsletter Section */

